--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       </div>
       <br />
     </header>
-    <div class="gambar" id="images"></div>
+    <div class="gambar" id="images"><img id="load" /></div>
     <h1>Upload Your Image</h1>
 
     <form action="/upload" method="post" enctype="multipart/form-data">
