--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
     }
 
     function greeting() {
-      alert("1 + 5 = 🍓");
+      alert("明日からもっともっと辛いよ! そして優しい！");
     }
 
     function showname() {
